[project]
name = "comfyui-model-organizer"
version = "1.0.0"
description = "ComfyUI plugin for automatic model organization and management"
authors = [
    { name = "ComfyUI Community" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-Model-Organizer"
Repository = "https://github.com/yourusername/ComfyUI-Model-Organizer"
Issues = "https://github.com/yourusername/ComfyUI-Model-Organizer/issues"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ['py38']
